[package]
name = "yerpc"
version = "0.6.2"
edition = "2021"
license = "Apache-2.0/MIT"
repository = "https://github.com/deltachat/yerpc"
description = "Ergonomic JSON-RPC library for async Rust with Axum support"
authors = [
  "Franz Heinzmann <Frando>",
  "Contributors to yerpc"
]

[[bin]]
name = "generate-base-types"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yerpc_derive = { path  = "../yerpc-derive", version = "0.6" }
async-channel = "1.9.0"
async-lock = "3.4.0"
async-trait = "0.1.86"
futures = "0.3.31"
futures-util = "0.3.31"
log = "0.4.25"
serde_json = "1.0.138"
serde = { version = "1.0.217", features = ["derive"] }

# type generating dependencies
typescript-type-def = { version = "0.5.13", features = ["json_value"] }
schemars = { version = "0.8.21", optional = true }

# optional dependencies
anyhow = { version = "1.0.95", optional = true }
axum = { version = "0.8.1", features = ["ws"], optional = true }
tokio-tungstenite = { version = "0.26.1", optional = true }
tokio = { version = "1.43.0", features = ["rt", "macros"], optional = true }
tracing = { version = "0.1.41", optional = true }

[features]
anyhow_expose = ["anyhow"]
support-axum = ["axum", "tokio", "anyhow", "tracing"]
support-tungstenite = ["tokio", "tokio-tungstenite", "anyhow"]
openrpc = ["schemars", "yerpc_derive/openrpc"]

[dev-dependencies]
anyhow = "1.0.95"
axum = { version = "0.8.1", features = ["ws"] }
tokio-tungstenite = { version = "0.26.1" }
tokio = { version = "1.43.0", features = ["rt", "macros"] }
url = "2.5.4"
