[package]
name = "yerpc_example_axum"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "yerpc-axum"
path = "src/webserver.rs"

[dependencies]
anyhow = "1.0.95"
serde = "1.0.217"
serde_json = "1.0.138"
axum = { version = "0.8.1", features = ["ws"] }
futures = "0.3.31"
log = "0.4.25"
async-trait = "0.1.86"
typescript-type-def = { version = "0.5.13", features = ["json_value"] }
async-broadcast = "0.4.1"
tokio = { version = "1.43.0", features = ["full"] }
tower-http = { version = "0.5.2", features = ["trace"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
schemars = "0.8.21"
yerpc = { path  = "../../yerpc", features = ["anyhow", "support-axum"]}
