[package]
name = "yerpc_example_tide"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "yerpc_example_tide"
path = "src/webserver.rs"

[dependencies]
tide = "0.16.0"
tide-websockets = "0.4.0"
anyhow = "1.0.95"
serde = "1.0.217"
serde_json = "1.0.138"
async-std = { version = "1.11.0", features = ["attributes"] }
futures = "0.3.31"
env_logger = "0.9.0"
log = "0.4.25"
schemars = "0.8.22"
async-trait = "0.1.53"
typescript-type-def = { version = "0.5.13", features = ["json_value"] }
async-broadcast = "0.4.0"
yerpc = { path  = "../../yerpc", features = ["anyhow"]}
